# periodic-table-cli-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
periodic_table_cli/: app.py  chart_processor.py  cli.py  colors.py  dashboard.py  data.json  data_processor.py  renderer.py  search_processor.py  state_controller.py  tables.py  utils.py
