# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "periodic-table-cli"
version = "2.1.2"
description = "An interactive Periodic Table of Elements app for the console!"
readme = "README.md"
authors = [{ name = "Spiro Metaxas", email = "spirometaxas@outlook.com" }]
maintainers = [{ name = "Spiro Metaxas", email = "spirometaxas@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",

    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Terminals",

    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["Periodic Table", "Periodic Table of Elements", "periodic", "periodic-table-cli", "Chemistry", "elements", "atoms", "atomic", "cli", "console", "terminal", "shell", "unicode"]
dependencies = [
    'windows-curses ; platform_system == "Windows"',
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://spirometaxas.com/projects/periodic-table-cli/"
"Repository" = "https://github.com/spirometaxas/periodic-table-cli-py"

[project.scripts]
"periodic-table-cli" = "periodic_table_cli.cli:main"

[tool.setuptools]
packages = ["periodic_table_cli"]